HelloUltraviolet/Fixtures/RejectedSource/Patterns/BasicPatternsDiagnostic/Source/Main.uv
//! Rejected pattern specimen for basic pattern diagnostic ownership.

public procedure basicPatternsDiagnosticReference() -> i32 {
    let pair: (i32, i32) = (1, 2)
    let (value, value) = pair
    return value
}
